--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portifólio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
-<body>
- 
+    <header>
+        <div class="container flex-header">
+            <div class="header__title">
+               <a href="#"><h1>Portifólio</h1></a> 
+            </div>
+            <nav class="nav__menu">
+                <ul class="menu__list">
+                    <li class="menu__list-item">
+                        <a href="#" class="item__link">Sobre mim</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a href="#" class="item__link">Projetos</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a href="#" class="item__link">Conhecimentos</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a href="#" class="item__link">Contato</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a href="#" class="item__link">Currículo</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
