--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
     <header>
-        <div class="container flex-header">
+        <div class="container flex__header">
             <div class="header__title">
-               <a href="#"><h1>Portifólio</h1></a> 
+               <h1>Portifólio</h1> 
             </div>
             <nav class="nav__menu">
+                <div class="mobile__menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
                 <ul class="menu__list">
                     <li class="menu__list-item">
                         <a href="#" class="item__link">Sobre mim</a>
@@ -34,6 +39,7 @@
             </nav>
         </div>
     </header>
+    <script src="./assets/scripts/mobile-navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
